--- a/padlock.css
+++ b/padlock.css
@@ -25,6 +25,11 @@
 	font-family: Arial, sans-serif;
 	line-height: 130%;
 }
+
+	/* clip */
+	.padlock-box.padlock-browser-chrome35 { overflow: hidden; }
+	.padlock-box.padlock-browser-chrome35 .padlock-box-content { width: 2000px; }
+
 	.padlock-browser-chrome35 .padlock-url {
 		padding: 2px 3px 1px 3px;
 	}
@@ -66,6 +71,10 @@
 	font-family: Arial, sans-serif;
 	line-height: 18px;
 }
+	/* clip */
+	.padlock-box.padlock-browser-firefox32 { overflow: hidden; }
+	.padlock-box.padlock-browser-firefox32 .padlock-box-content { width: 2000px; }
+
 	.padlock-browser-firefox32 .padlock-icon-container {
 		float: left;
 		padding: 0 4px 2px 5px;
@@ -110,6 +119,10 @@
 	font-family: Arial, sans-serif;
 	line-height: 130%;
 }
+	/* clip */
+	.padlock-box.padlock-browser-firefox8 { overflow: hidden; }
+	.padlock-box.padlock-browser-firefox8 .padlock-box-content { width: 2000px; }
+
 	.padlock-browser-firefox8 .padlock-icon-container {
 		float: left;
 		background-color: #d8e4f4;
